Fix spacing and selector issues in styles.css; adjust aside h2 position

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,6 +44,7 @@ aside{
     background-color:burlywood;
     color:rgb(177, 25, 152);
     text-align:center;
+    
 }
 aside img{
     width: 200px;
@@ -63,15 +64,15 @@ footer {
     border-top:1px solid rgb(207, 64, 64);
     text-align:center;
 }
-/* Class selector */
+
 .box{
     margin:1 rem;
     border:1 px solid rgb(49, 19, 19);
     padding: 1 rem;
     background: colore #123;
 }
-aside h2{
+.aside h2{
     position:absolute;
-    top: 200px;
+    top: 220px;
     left:150px;
 }
